Added login feature.On login the user will be redirected to profile.php which displays a welcome message

--- a/adduser.html
+++ b/adduser.html
@@ -29,7 +29,7 @@
 			</tr>
 			<tr>
 				<td>Password:</td>
-				<td><input type="password" name="password" required></td>
+				<td><input type="password" name="pass" required></td>
 				<td><span class="error">*</span><td>
 			</tr>
 		</table>
