--- a/adduser.html
+++ b/adduser.html
@@ -4,6 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="register.css">
 </head>
 <body>
+<div class="header">
+	<h1 style="position:absolute;top:0;left:45%">Facelog</h1>
+</div>
+	<img src="signinbg.jpg" width="400" height="400" style="position:absolute;top:20%;left:10%">
 	<form enctype="multipart/form-data" action="adduser.php" method="post" id="fields" onsubmit="return validateForm()">
 		<p><span class="error">* required field.</span></p>
 		<table>
